# base-cpp-project

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
.devcontainer/: Dockerfile
